--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,6 +1,6 @@
 
 .button {
-  @apply bg-primary hover:bg-hover text-text px-4 py-3 rounded transition-colors text-lg border border-transparent;
+  @apply bg-primary hover:bg-hover text-text px-4 py-3 rounded transition-colors text-lg border border-transparent flex justify-center;
   
   &.small {
     @apply py-1 text-base;
@@ -9,4 +9,8 @@
   &.outline {
     @apply bg-transparent hover:border-text;
   }
+}
+
+.loader {
+  @apply w-7 p-0;
 }
