--- a/src/screens/Category/components/CategoryItem/styles.module.scss
+++ b/src/screens/Category/components/CategoryItem/styles.module.scss
@@ -1,12 +1,12 @@
 .card {
   @apply w-full p-3 bg-gray-700 bg-opacity-55 rounded-md flex justify-between hover:ring-1 ring-primary transition-all h-20 items-center;
   &:hover .actions {
-    @apply flex opacity-100
-  } 
+    @apply flex opacity-100;
+  }
 }
 
 .actions {
-  animation: opacity .3s;
+  animation: opacity 0.3s;
   @apply gap-2 items-center hidden;
 }
 
@@ -21,4 +21,8 @@
   to {
     opacity: 1;
   }
+}
+
+.button {
+  @apply cursor-pointer stroke-text w-8 h-8;
 }
