--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .input {
-    @apply bg-background-50 p-3 outline-none focus:ring ring-gray-400 transition-shadow rounded text-text text-lg;
+    @apply bg-background-50 p-3 outline-none focus:ring ring-gray-400 transition-shadow rounded text-text text-lg disabled:text-gray-400;
   }
   .scroll {
     @apply [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-track]:rounded-full [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500;
@@ -16,4 +16,8 @@
 
 body {
   @apply scroll;
+}
+
+.grecaptcha-badge {
+  display: none !important;
 }
